--- a/RNotebook.ipynb
+++ b/RNotebook.ipynb
@@ -1018,6 +1018,86 @@
     "y <- x^2 + 5\n",
     "plot(x, y, \"o\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejemplos de codigo\n",
+    "\n",
+    "Calcular el factorial de un numero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El factorial de 7 es 5040"
+     ]
+    }
+   ],
+   "source": [
+    "factorial <- function(n) {\n",
+    "  if (n == 0) {\n",
+    "    return(1)\n",
+    "  } else {\n",
+    "    return(n * factorial(n - 1))\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "numero <- as.integer(readline(\"Ingresa un número para calcular su factorial: \"))\n",
+    "\n",
+    "resultado <- factorial(numero)\n",
+    "\n",
+    "cat(\"El factorial de\", numero, \"es\", resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conocer una inversion, interes anual y el capital resultante de dicha inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El capital obtenido de la inversion es: $  3500 \n",
+      " La cantidad final a recibir es: $  4200"
+     ]
+    }
+   ],
+   "source": [
+    "Cantidad <- as.numeric(readline(\"Valor de la inversion: \"))\n",
+    "InteresAnual <- as.numeric(readline(\"Valor del interes: \"))\n",
+    "Años <- as.numeric(readline(\"Años que duro la inversion: \"))\n",
+    "\n",
+    "InteresTemp <- (Cantidad*(InteresAnual/100))\n",
+    "TotalTemp <- (InteresTemp*Años)\n",
+    "InteresTotal <- (TotalTemp+Cantidad)\n",
+    "\n",
+    "cat(\"El capital obtenido de la inversion es: $ \",TotalTemp,\"\\n\",\n",
+    "    \"La cantidad final a recibir es: $ \",InteresTotal)"
+   ]
   }
  ],
  "metadata": {
